Changes for Perl extension Module-Install

        - Support for 'keywords' key in META.yml (CHORNY)

0.80 Tue 17 Mar 2009
	- Don't generate MYMETA.yml if we don't have YAML::Tiny, even if
	  we've said we need it. This was breaking Catalyst. (ADAMK)
        - Will not ask about auto-installing mandatory dependencies, if
          $ENV{PERL5_CPANPLUS_IS_RUNNING} is set (CHORNY)

0.79 Wed  4 Feb 2009
	- Upgrading (and testing) Perl version normalisation
	- Adding an experimental-grade implementation of MYMETA.yml

0.78 Sun 25 Jan 2009
	- Much more aggressive dependencies, except PAR::Dist (ADAMK)
	- Adding inc::Module::Install::DSL for simple installs (ADAMK)
        - We now avoid poking references in @INC in case they
          have strange overload behaviours.  (PJF, RT #39929)
	- installdirs and install_as_* are now documented in
	  Module/Install.pod (PJF, RT #25111)
	- Applied patch RT #38443 from Oleg Kostyuk for two-part
	  version numbers being passed to perl_version.  Calling
	  'perl_version 5.8' should now work the same as
	  'perl_version 5.008'.  Additional tests added to
	  t/07_perl_version.t to check this.  (PJF, RT #38443)
	- Module::Install no longer complains about the phrase
	  "All rights reserved" in association with open source
	  licenses.  (PJF, RT #41268)

0.77 Fri  8 Aug 2008
	- Don't break directories starting with inc(oming) (ADAMK, RT #30637)
	- Adding more phrases to recognise GPL variants (ADAMK, RT #35195)
	- Skip 03_autoinstall.t except at release, as it can hang in some
	  situations (ADAMK, #29448)
	- Add a file check to the all_from param (ADAMK, #24586)
	- Fixed bug in can_run when PATH starts with a sep (ADAMK, #29866)
	- Don't overwrite dist args if there is a preop (ADAMK, #36831)
	- Bug fix in the command dispatcher (ADAMK, #27327)
        - perl_version now understands three-part Perl versions like
          5.8.1 (PJF, RT #38317)
	- Numify version.pm objects when generating YAML (ADAMK)

0.76 Thu 17 Jul 2008